# typedpy

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  __init__.py  coverage.txt  fields.py  mutpy-report.txt  pyproject.toml  setup.cfg  setup.py  structures.py  tox.ini  update-cov-badge.bat
coverage_html_report/: index.html  status.json  typedpy___init___py.html  typedpy_extfields_py.html  typedpy_fields_py.html  typedpy_json_schema_mapping_py.html  typedpy_serialization_py.html  typedpy_serialization_wrappers_py.html  typedpy_structures_py.html
docs/: Makefile  common_utilities.rst  conf.py  errors.rst  faq.rst  fields.rst  index.rst  json_schema.rst  limitations.rst  make.bat  requirements.txt  serialization.rst  structures.rst  stubs.rst  tutorial-basics,rst  tutorial.rst  tutorial_advanced.rst  tutorial_basics,rst  tutorial_basics.rst  tutorial_dataclass_comparison.rst  versioning.rst
examples/: __init__.py  api_example.py  api_example.pyi  enums.py  enums2.py  future_annotations.py  generic_stuff.py  models.py  more_classes.py  some_data.py  struct_with_constants.py  usage.py
other/: usage.py
profiling/: example.py  example1.py  readme.txt
schema/: from_schema.py  jsonschema.json
tests/: api_example.py  api_example.pyi  conftest.py  examples.py  flaskutil.py  test_Map.py  test_Set.py  test_anyof.py  test_array.py  test_block_unknown_consts.py  test_boolean.py  test_classreference.py  test_common.py  test_constant_field.py  test_copy.py  test_create_pyi.py  test_dataclass_style.py  test_decimal.py  test_deque.py  (+56 more)
(+203 files in other folders)
