[metadata]
description_file = README.rst

[aliases]
test=pytest

# .coveragerc to control coverage.py
[coverage:run]
branch = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report

[pylint]
disable = R0903, W0613, C0111, W0703, C0103, W0212, R0903, no-else-return, unnecessary-pass, too-many-ancestors, too-few-public-methods, W0707,
          w1203, C0415, R0911, W0702
ignore-docstrings = yes
output-format = colorized
max-line-length=120
fail-under = 10
min-similarity-lines=14
ignore-comments=yes
ignore-imports=yes
